--- a/css/main.css
+++ b/css/main.css
@@ -60,10 +60,10 @@ textarea {
     -webkit-border-radius: 3px;
     -khtml-border-radius: 3px;
 	border:2px outset #DB7E40;
-	padding:3px;
+	padding:1px 2px;
 	background:#C2816B;
 	cursor:pointer;
-	float:left;
+	display:inline;
 }
 
 .button:active{
